--- a/esphome-magnetometer.yaml
+++ b/esphome-magnetometer.yaml
@@ -98,7 +98,7 @@ number:
     mode: box
     min_value: 0
     max_value: 9999999
-    step: 0.000000001
+    step: 0.01
     initial_value: ${volume_per_half_rotation_initial_value}
     update_interval: never
     restore_value: true
